force-app/main/default/objects/Milestone_Owner_Details__c/Milestone_Owner_Details__c.object-meta.xml
<CustomObject>
    <label>Milestone Owner Details</label>
    <nameField>
        <displayFormat>MOD-{0000}</displayFormat>
        <label>Milestone Owner Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Owner Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>