force-app/main/default/objects/Milestone_Owner_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Milestone Owner Details</relationshipLabel>
    <relationshipName>Milestone_Owner_Details</relationshipName>
    <type>Lookup</type>
</CustomField>