force-app/main/default/objects/Milestone_Owner_Details__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>