force-app/main/default/objects/Milestone_Owner_Details__c/fields/Milestone_Owner__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Milestone_Owner_Details</relationshipName>
    <type>Lookup</type>
</CustomField>