force-app/main/default/objects/Milestone_Owner_Details__c/fields/SLA_Status__c.field-meta.xml
<CustomField>
    <fullName>SLA_Status__c</fullName>
    <formula>IF(ISBLANK( End_Date__c ) , 
    IF((NOW() - Start_Date_with_Business_Hours__c ) / (Target_Date__c  -  Start_Date_with_Business_Hours__c) &gt; 3 ,
     &quot;Level 3&quot; + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot; ,30, 30) , 
    IF((NOW() - Start_Date_with_Business_Hours__c ) / (Target_Date__c  -  Start_Date_with_Business_Hours__c) &gt; 1.5 , 
     &quot;Level 2&quot; + IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot; ,30, 30) , 
    IF((NOW() - Start_Date_with_Business_Hours__c ) / (Target_Date__c  -  Start_Date_with_Business_Hours__c) &gt; 1 , 
     &quot;Level 1&quot; + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot; ,30, 30) ,
    IF((NOW() - Start_Date_with_Business_Hours__c ) / (Target_Date__c  -  Start_Date_with_Business_Hours__c) &lt;= 1 , 
     IMAGE(&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ2KtjWYNV2CpJU40eoU3PsLg6RzTGJSq41A&amp;usqp=CAU&quot;, &quot;completed&quot; ,30, 30) ,&apos;&apos;)))), 
 IF((End_Date__c  -  Start_Date_with_Business_Hours__c ) / ( Target_Date__c  -  Start_Date_with_Business_Hours__c ) &gt; 3 , 
   &quot;Level 3&quot; + IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot; ,30, 30), 
 IF((End_Date__c  -  Start_Date_with_Business_Hours__c ) / ( Target_Date__c  -  Start_Date_with_Business_Hours__c ) &gt; 1.5 , 
   &quot;Level 2&quot; + IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot; ,30, 30) , 
 IF((End_Date__c  -  Start_Date_with_Business_Hours__c ) / ( Target_Date__c  -  Start_Date_with_Business_Hours__c ) &gt; 1 , 
   &quot;Level 1&quot; + IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot; ,30, 30) ,
 IF((End_Date__c  -  Start_Date_with_Business_Hours__c ) / ( Target_Date__c  -  Start_Date_with_Business_Hours__c ) &lt;= 1 , 
   IMAGE(&quot;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZ2KtjWYNV2CpJU40eoU3PsLg6RzTGJSq41A&amp;usqp=CAU&quot;, &quot;completed&quot; ,30, 30) ,&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA Status</label>
    <type>Text</type>
</CustomField>