force-app/main/default/objects/Milestone_Owner_Details__c/fields/Start_Date_with_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_with_Business_Hours__c</fullName>
    <label>Start Date with Business Hours</label>
    <type>DateTime</type>
</CustomField>